--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,10 +150,10 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation("com.facebook.react:react-android")
+    implementation('com.facebook.react:react-android:0.71.2')
 
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
-    implementation 'androidx.core:core-ktx:+'
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+    implementation 'androidx.core:core-ktx:1.9.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
