--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "npm": "^9.5.0",
+    "pod-install": "^0.1.38",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
